# ariel-ml

./: .gitignore  Cargo.toml  README.md  build.rs  environment.yaml  laze-project.yml  lenet5_float.mlir  lenet5_quantized.mlir  load_mlir.py  simple_mul.mlir
.cargo/: config.toml
contrib/: iree_workgroup_dispatch.c
src/: dummy_c_symbols.rs  iree_threading.rs  main.rs  ptr_iree_lib_query_fn.rs  static_library_loader.rs  workqueue.rs
