[package]
name = "ariel-ml"
version = "0.1.0"
edition = "2024"

[build-dependencies]
# cc = "1.0.90"
cc = "=1.2.38"
# cmake = "0.1.54"

[dependencies]
ariel-os = { path = "build/imports/ariel-os/src/ariel-os", features = [] }
ariel-os-boards = { path = "build/imports/ariel-os/src/ariel-os-boards" }
eerie = { path = "/home/zhaolan/eerie", features = ["runtime"], default-features = false}


[features]
default = ["lenet5", "static", "quantized", "multicore"]
mnist = []
simple_mul = []
resnet50 = []
static = []
emitc = []
lenet5 = []
quantized = []
multicore = []
